added new social media buttons and added social media section to github page

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -38,6 +38,10 @@
                 {% include elements/buttons.html %}
             </div>
             <div class="elem">
+                <h4>SOCIAL MEDIA</h4>
+                {% include elements/social-media.html %}
+            </div>
+            <div class="elem">
                 <h4>ACCORDION</h4>
                 {% include elements/accordion.html %}
             </div>
