--- a/_scss/elements/_quotes.scss
+++ b/_scss/elements/_quotes.scss
@@ -36,7 +36,9 @@ blockquote {
     margin: 20px 0;
     
     p {
-      margin: 0 30px;
+      margin-left: 30px;
+      margin-right: 30px;
+      margin-top: 0;
       position: relative;
       z-index: 1;
     }
@@ -53,7 +55,7 @@ blockquote {
   
   p {
     font: 600 1.125em $font-family;
-    margin: 25px 0 0;
+    margin-top: 25px;
   }
   
   @include breakpoints(tablet nav mobile) {
