add bodytext list mixin that can be used as a default for lists

--- a/_includes/elements/accordion.html
+++ b/_includes/elements/accordion.html
@@ -1,5 +1,5 @@
 <div class="accordion-container">
-    <div class="accordion links-list">
+    <div class="accordion">
         <ul>
             <li>
                 <input type="checkbox" id="toggle1">
