--- a/_scss/base/_custom-mixins.scss
+++ b/_scss/base/_custom-mixins.scss
@@ -6,6 +6,7 @@
 
 // ----------------------------------------------------------------------
 
+@import "custom-mixins/bodytext";
 @import "custom-mixins/custom-calc";
 @import "custom-mixins/custom-filter";
 @import "custom-mixins/custom-linear-gradient";
