--- a/_scss/elements/_lists.scss
+++ b/_scss/elements/_lists.scss
@@ -1,57 +1,31 @@
-%list {
-  @include row(true);
-  
-  ul {
-    font-size: .875em;
-    margin: 0;
-    padding-left: 15px;
-    padding-right: 15px;
-    
-    &:nth-of-type(1) {
-      margin-top: -7px;
-    }
-    
-    li {
-      list-style-type: disc;
-      margin: 0 0 0 18px;
-    }
-  }
-  
-  @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
-    ul {
-      margin-top: -7px;
-      
-      &[class*="column"] {
-        @include span(6);
-      }
-      
-      &[class*="column-full"] {
-        @include span(12);
-      }
-    }
-  }
-}
-
 .links-list,
 .simple-list {
-  @extend %list;
-}
+  @include bodytext-list();
+  @include row(true);
 
-.links-list ul li {
-  padding: 0;
-  
-  a {
-    display: block;
-    font: 400 1.143em/1.375em $font-family;
-    padding: 7px 0 7px 5px;
-    position: relative;
-    vertical-align: top;
-    top: 2px;
+  > ul, > ol {
+    @include span(12);
+    &:first-child {
+      margin-bottom: 14px;
+    }
+
+    @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+      &[class*="column"] {
+        @include span(6);
+        margin-bottom: 0;
+      }
+    }
   }
 }
 
-.simple-list ul li {
-  font: 400 1.143em/1.375em $font-family;
-  padding: 7px 0 7px 5px;
+.links-list {
+  ul, ol {
+    li a {
+      display: block;
+      font-weight: 400;
+      position: relative;
+      vertical-align: top;
+      top: 2px;
+    }
+  }
 }
-
