--- a/_scss/elements/_lists.scss
+++ b/_scss/elements/_lists.scss
@@ -11,7 +11,7 @@
   > ul, > ol {
     @include span(12);
 
-    &[class*="column"] {
+    &[class$="column"] {
       margin-bottom: 14px;
     }
 
@@ -20,7 +20,7 @@
     }
 
     @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
-      &[class*="column"] {
+      &[class$="column"] {
         @include span(6);
         margin-bottom: 0;
       }
