add 3rd tier to first-child heading top margin reset

--- a/_scss/layout/_grid.scss
+++ b/_scss/layout/_grid.scss
@@ -41,7 +41,8 @@
 .container .inner-container {
   @for $i from 1 through 6 {
     > h#{$i}:first-child,
-    > :first-child > h#{$i}:first-child {
+    > *:first-child > h#{$i}:first-child,
+    > *:first-child > *:first-child > h#{$i}:first-child {
       margin-top: 0;
     }
   }
