add two-column-body element in place of old top-stories

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -4,8 +4,8 @@
         <div class="inner-container">
             <h2>04 | ELEMENTS</h2>
             <div class="elem">
-                <h4>LIST WIDGET</h4>
-                {% include elements/top-stories.html %}
+                <h4>TWO COLUMN CONTENT</h4>
+                {% include elements/two-column-body.html %}
             </div>
             <div class="elem">
                 <h4>NAVIGATION</h4>
