--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -28,4 +28,4 @@
 @import "elements/playlist";
 @import "elements/quotes";
 @import "elements/social";
-@import "elements/top-stories";
+@import "elements/two-column-body";
