rename div class around video to video-wrapper

--- a/_includes/elements/playlist.html
+++ b/_includes/elements/playlist.html
@@ -1,7 +1,7 @@
 <section class="playlist">
     <div class="playlist-player custom-playlist">
         <div class="video-player">
-            <div class="playlist-wrapper">
+            <div class="video-wrapper">
                 <div class="ytPlayer" data-ytid="ELnKzD60lRE"></div>
                 <!-- <iframe width="560" height="315" frameborder="0" data-ytid="eOKkySSOEzI" class="ytPlayer" id="ytPlayer0" allowfullscreen="1" title="YouTube video player" src="https://www.youtube.com/embed/eOKkySSOEzI?autoplay=0&amp;controls=1&amp;modestbranding=1&amp;rel=0&amp;wmode=opaque&amp;enablejsapi=1"></iframe> -->
             </div>
