--- a/_scss/elements/_playlist.scss
+++ b/_scss/elements/_playlist.scss
@@ -41,7 +41,7 @@
       position: relative;
       z-index: 1;
       
-      .playlist-wrapper {
+      .video-wrapper {
         height: 0;
         overflow: hidden;
         padding-bottom: 56.4%;
