added forms styling

--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -16,6 +16,7 @@
 @import "elements/custom-select";
 @import "elements/dropdown-nav";
 @import "elements/footer";
+@import "elements/forms";
 @import "elements/header";
 @import "elements/headlines";
 @import "elements/leaders";
