--- a/_includes/elements/photo-slideshow.html
+++ b/_includes/elements/photo-slideshow.html
@@ -1,5 +1,5 @@
 <div class="photo-slideshow">
-    <figure class="photo">
+    <figure class="photo cur-photo">
         <span class="centered-image">
             <span class="img-container">
                 <img alt="A Soldier from the British Army's 250th Gurkha Signal Squadron, 30th Signal Regiment, talks on an HF radio at a cross training event with U.S. Army Soldiers from the 44th Expeditionary Signal Battalion, 2nd Signal Brigade, June 1, 2016 during exercise Stoney Run in Bramcote, England. Stoney Run is an annual U.S.-U.K. signal exercise designed to test and validate communications and network capabilities, and enhance interoperability and partner capacity between the two NATO Allies." src="https://www.army.mil/e2/c/images/2016/06/01/437559/size0.jpg" sizes="(min-width: 640px) 640px" srcset="https://www.army.mil/e2/c/images/2016/06/01/437559/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/06/01/437559/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/06/01/437559/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/06/01/437559/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/06/01/437559/size4.jpg 100w" class="resp-image">
