word wrap mixin

--- a/_scss/base/_mixins.scss
+++ b/_scss/base/_mixins.scss
@@ -53,6 +53,7 @@
 @import "mixins/box-model";
 @import "mixins/clearfix";
 @import "mixins/inline-block";
+@import "mixins/word-wrap";
 
 // ----------------------------------------------------------------------
 
