create new banners and parallax-image elements, banners with new page in guide

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -79,6 +79,7 @@
         </div>
     </div>
     {% include elements/hot-topic.html %}
+    {% include elements/parallax-image.html %}
     <div class="container no-bottom">
         <div class="inner-container">
             <div class="elem">
