--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -24,6 +24,8 @@
 @import "elements/nav";
 @import "elements/news";
 @import "elements/notifications";
+@import "elements/page-banner";
+@import "elements/parallax-image";
 @import "elements/photo-slideshow";
 @import "elements/playlist";
 @import "elements/quotes";
